# LinkedInPost

./: README.md  pyproject.toml
src/socialpost/: crew.py  main.py
src/socialpost/config/: agents.yaml  tasks.yaml
src/socialpost/tools/: research.py
