[tool.poetry]
name = "socialpost"
version = "0.1.0"
description = "socialpost using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.32.2" }

[tool.poetry.scripts]
socialpost = "socialpost.main:run"
train = "socialpost.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
